Fix alignment, remove socials from post detail cards

--- a/public/css/channels.css
+++ b/public/css/channels.css
@@ -5,7 +5,8 @@
     column-gap: var(--grid-gutter);
     align-items: start;
     grid-template-columns: 1fr;
-    grid-template-areas: "title";
+    grid-template-areas:
+      "title";
 
     &:has(nav):not(:has(.favicon)):not(:has(.details)) {
       grid-template-columns: 1fr;
@@ -15,7 +16,8 @@
 
       @media (width >= 768px) {
         grid-template-columns: 1fr auto;
-        grid-template-areas: "title nav";
+        grid-template-areas:
+          "title nav";
       }
     }
 
@@ -137,6 +139,7 @@
   }
 
   nav {
+
     background: var(--header-pill-bg);
     .current {
       background: var(--header-pill-active-bg);
@@ -219,7 +222,7 @@
   @media (width >=768px) {
     display: grid;
     gap: var(--grid-gutter);
-    grid-template-columns: minmax(min-content, 1fr) 11fr;
+    grid-template-columns: minmax(10ch, 1fr) 11fr;
     align-items: start;
     > h2 {
       display: flex;
@@ -300,27 +303,27 @@
   align-content: start;
   gap: var(--space-xs);
   &:has(.bundleitem-highlight) {
-    outline: 4px dotted var(--primary-6);
-    outline-offset: -4px;
+    outline: 2px dotted var(--primary-5);
+    outline-offset: 2px;
   }
   &:has(.favicon) {
-    grid-template-columns: auto 1fr;
-    grid-template-areas:
-      "favicon link"
-      "details details";
+  grid-template-columns: auto 1fr;
+  grid-template-areas:
+    "favicon link"
+    "details details";
   }
   &:not(:has(.favicon)) {
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "link"
-      "details";
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "link"
+    "details";
   }
 
   .favicon {
     grid-area: favicon;
   }
 
-  > a[href^="http"],
+  > a[href^=http],
   h3[id^="post-"] {
     grid-area: link;
     font-family: var(--font-display-bold);
@@ -337,7 +340,7 @@
     flex-direction: column;
     gap: var(--space-2xs);
     font-size: var(--step--1);
-    > a[href^="http"] {
+    > a[href^='http'] {
       font-size: var(--step-0);
       font-family: var(--font-display-bold);
     }
@@ -364,7 +367,7 @@
       border-radius: 999px;
       text-decoration: none;
       &:hover {
-        background: var(--surface-fore);
+         background: var(--surface-fore);
       }
     }
   }
@@ -377,7 +380,7 @@
   padding: var(--space-s);
   font-size: var(--step--1);
 
-  > li {
+  >li {
     column-gap: var(--space-xs);
     row-gap: var(--space-3xs);
     display: grid;
@@ -406,6 +409,7 @@
   }
   .favicon {
     grid-area: favicon;
+
   }
   a {
     grid-area: link;
